update link paths

--- a/portfolio/layouts/projects/marian-bantjes.html
+++ b/portfolio/layouts/projects/marian-bantjes.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lily Design - Marian Bantjes</title>
-    <link href="/css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+    <link href="./../../../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -15,18 +15,18 @@
         <!-- Header -->
         <header>
             <div>
-                <a href="/">
-                    <img src="/images/logo-w-letterhead-outl-bigger-72.png" />
+                <a href="./../../../index.html">
+                    <img src="./../../../images/logo-w-letterhead-outl-bigger-72.png" />
                 </a>
             </div>
-            <nav>
+            <nav style="word-spacing: 40px;">
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about.html">About</a></li>
-                    <li><a href="/portfolio/portfolio.html">Portolio</a></li>
-                    <li><a href="/services.html">Services</a></li>
-                    <li><a href="/shopping/shopping.html">Shopping</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="./../../../index.html">Home</a></li>
+                    <li><a href="./../../../about.html">About</a></li>
+                    <li><a href="./../../../portfolio/portfolio.html">Portfolio</a></li>
+                    <li><a href="./../../../services.html">Services</a></li>
+                    <li><a href="./../../../shopping/shopping.html">Shop</a></li>
+                    <li><a href="./../../../contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -34,13 +34,14 @@
         <div>
             <nav>
                 <ul style="padding-left: 0; padding-top: 30px; padding-bottom: 15px;">
-                    <li style="display: inline;"><a style="color: #066129" href="/portfolio/portfolio.html">Portolio</a>
+                    <li style="display: inline;"><a style="color: #066129" href="./../../../portfolio/portfolio.html">Portfolio</a>
                     </li>
                     <span style="color: #066129;">|</span>
                     <li style="display: inline;"><a style="color: #066129"
-                            href="/portfolio/layouts/layouts.html">Layouts</a>
+                            href="./../layouts.html">Layouts</a>
                     </li> <span style="color: #066129;">|</span>
-                    <li style="display: inline;"><a style="color: #066129" href="#top">Marian Bantjes Magazine Spread</a></li>
+                    <li style="display: inline;"><a style="color: #066129" href="#top">Marian Bantjes Magazine</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -50,54 +51,22 @@
             <h2 class="hero-header" style="text-align: left; margin-left: 0; width: 100%;">Marian Bantjes Magazine
                 Spread</h2>
         </div>
-
         <!-- Top Section -->
-        <div style="display: flex">
+        <div style="display: flex;">
             <!-- Images -->
-            <div style="display: flex; flex-direction: column; margin-right: 15px; width: 49%;">
-                <!-- Initial Sketch -->
-                <div style="display: flex; flex-direction: row;">
-                    <div>
-                        <img style="width: 100%; height: 100%;" src="/portfolio/layouts/projects/image/IMG_1410.jpeg">
-                    </div>
+            <div
+                style="flex: 1; display: flex; flex-direction: column;  width: 49%; padding-top: 55px;">
+                <div>
+                    <img style="width: 100%; height: 100%"
+                        src="./image/Magazine_Mockup_5.png">
                 </div>
-
-                <!-- The Rest of the Images -->
-                <div style="display: flex; flex-direction: row; height: auto;">
-                    <!-- Salazar Student Rewards -->
-                    <div style="flex: 1;">
-                        <img style="width: 100%; height: 100%;"
-                            src="/portfolio/layouts/projects/image/bantjes_2007_salazar.jpg">
-                    </div>
-
-                    <div style="flex: 1; display: flex; flex-direction: column;">
-                        <!-- Marian's Face -->
-                        <div style="flex-grow: 1;">
-                            <img style="width: 100%; height: 100%; object-fit: cover;"
-                                src="/portfolio/layouts/projects/image/bantjes_2017_by-Mark-Mushet2.jpg">
-                        </div>
-
-                        <!-- 3-Image Row -->
-                        <div style="display: flex; flex-direction: row;">
-                            <div style="flex: 1;">
-                                <img style="width: 100%; height: 100%;"
-                                    src="/portfolio/layouts/projects/image/bantjes_2014_wired-lovecure-1.jpg">
-                            </div>
-                            <div style="flex: 1;">
-                                <img style="width: 100%; height: 100%;"
-                                    src="/portfolio/layouts/projects/image/bantjes_2009_designindaba.jpg">
-                            </div>
-                            <div style="flex: 1;">
-                                <img style="width: 100%; height: 100%;"
-                                    src="/portfolio/layouts/projects/image/bantjes_2010_NYT-so.jpg">
-                            </div>
-                        </div>
-                    </div>
+                <div>
+                    <img style="width: 100%; height: auto"
+                        src="./image/Magazine_Spread_MB-v2 (1) (2).jpg">
                 </div>
             </div>
-
-            <!-- overview / objective -->
-            <div style="width: 49%">
+            <!-- overview -->
+            <div style="flex: 1; width: 49%;padding-left: 40px;">
                 <h3 style="color: #DA1E51; font-weight: normal; font-size: 3rem;">Overview</h3>
                 <p>This magazine spread was designed for a mock feature article on the graphic designer Marian Bantjes
                     who’s known for her ornate and maximalist typography and patterns.
@@ -118,9 +87,10 @@
         </div>
 
         <!-- Middle Section -->
-        <div style="display: flex;">
-            <!-- Process -->
-            <div style="flex: 1; width: 49%;">
+        <div style="display: flex; padding-top: 50px;">
+
+            <!-- process -->
+            <div style="width: 49%;">
                 <h3 style="color: #DA1E51; font-weight: normal; font-size: 3rem;">Process</h3>
                 <p>This project was challenging as I struggled to identify the line between inspiration and copying,
                     especially since Bantjes’ style has similar aspects to my own. I went through many iterations and at
@@ -143,16 +113,51 @@
                 </p>
             </div>
             <!-- Images -->
-            <div style="flex: 1; display: flex; flex-direction: column; padding-left: 20px; padding-top: 60px; width: 49%;">
-                <div>
-                    <img style="width: 100%; height: 100%" src="/portfolio/layouts/projects/image/Magazine_Mockup_5.png">
+            <div style="display: flex; flex-direction: column;  width: 49%; padding-left: 40px; padding-top: 55px;">
+                <!-- Initial Sketch -->
+                <div style="display: flex; flex-direction: row;">
+                    <div>
+                        <img style="width: 100%; height: 100%;" src="./image/IMG_1410.jpeg">
+                    </div>
                 </div>
-                <div>
-                    <img style="width: 100%; height: auto"
-                        src="/portfolio/layouts/projects/image/Magazine_Spread_MB-v2 (1) (2).jpg">
+
+                <!-- The Rest of the Images -->
+                <div style="display: flex; flex-direction: row; height: auto;">
+                    <!-- Salazar Student Rewards -->
+                    <div style="flex: 1;">
+                        <img style="width: 100%; height: 100%;"
+                            src="./image/bantjes_2007_salazar.jpg">
+                    </div>
+
+                    <div style="flex: 1; display: flex; flex-direction: column;">
+                        <!-- Marian's Face -->
+                        <div style="flex-grow: 1;">
+                            <img style="width: 100%; height: 100%; object-fit: cover;"
+                                src="./image/bantjes_2017_by-Mark-Mushet2.jpg">
+                        </div>
+
+                        <!-- 3-Image Row -->
+                        <div style="display: flex; flex-direction: row;">
+                            <div style="flex: 1;">
+                                <img style="width: 100%; height: 100%;"
+                                    src="./image/bantjes_2014_wired-lovecure-1.jpg">
+                            </div>
+                            <div style="flex: 1;">
+                                <img style="width: 100%; height: 100%;"
+                                    src="./image/bantjes_2009_designindaba.jpg">
+                            </div>
+                            <div style="flex: 1;">
+                                <img style="width: 100%; height: 100%;"
+                                    src="./image/bantjes_2010_NYT-so.jpg">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+
         </div>
+
+
 
         <!-- Bottom Section -->
         <!-- <div style="display: flex;"> -->
@@ -188,7 +193,7 @@
         </div>
 
         <div style="text-align: center;">
-            <a href="/contact.html">
+            <a href="./../../../contact.html">
                 <h3>Reach Out</h3>
             </a>
             <ul>
@@ -199,8 +204,8 @@
 
         <div style="align-self:center;">
             <ul class="social-icons">
-                <li><a href="https://www.instagram.com/willows.studi0/"><img src="/images/icon-insta.png"></a></li>
-                <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="/images/icon-in.png"></a></li>
+                <li><a href="https://www.instagram.com/willows.studi0/"><img src="./../../../images/icon-insta.png"></a></li>
+                <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="./../../../images/icon-in.png"></a></li>
             </ul>
         </div>
     </footer>
