--- a/portfolio/layouts/layouts.html
+++ b/portfolio/layouts/layouts.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lily Design - Layouts</title>
-    <link href="/css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+    <link href="./../../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -15,18 +15,18 @@
       <!-- Header -->
       <header>
         <div>
-          <a href="/">
-            <img src="/images/logo-w-letterhead-outl-bigger-72.png" />
+          <a href="./../../index.html">
+            <img src="./../../images/logo-w-letterhead-outl-bigger-72.png" />
           </a>
         </div>
-        <nav>
+        <nav style="word-spacing: 40px;">
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/portfolio/portfolio.html">Portolio</a></li>
-            <li><a href="/services.html">Services</a></li>
-            <li><a href="/shopping/shopping.html">Shopping</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="./../../index.html">Home</a></li>
+            <li><a href="./../../about.html">About</a></li>
+            <li><a href="./../portfolio.html">Portfolio</a></li>
+            <li><a href="./../../services.html">Services</a></li>
+            <li><a href="./../../shopping/shopping.html">Shop</a></li>
+            <li><a href="./../../contact.html">Contact</a></li>
           </ul>
         </nav>
       </header>
@@ -39,29 +39,29 @@
       <!-- Gallery Section -->
       <div class="gallery">
         <div class="thumbnail">
-          <a href="/portfolio/layouts/projects/seeding-city.html"><h3>Seeding the City Poster</h3></a>
-          <a href="/portfolio/layouts/projects/seeding-city.html"><img src="/portfolio/layouts/images/SC-FM-mockup.jpg" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
-          <section><a href="/portfolio/layouts/projects/seeding-city.html">see more</a></section>
+          <a href="./projects/seeding-city.html"><h3>Seeding the City Poster</h3></a>
+          <a href="./projects/seeding-city.html"><img src="./images/SC-FM-mockup.jpg" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
+          <section><a href="./projects/seeding-city.html">see more</a></section>
         </div>
         <div class="thumbnail">
-          <a href="/portfolio/layouts/projects/marian-bantjes.html"><h3>Marian Bantjes Magazine Spread</h3></a>
-          <a href="/portfolio/layouts/projects/marian-bantjes.html"><img src="/portfolio/layouts/images/Magazine_Mockup_5.png" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
-          <section><a href="/portfolio/layouts/projects/marian-bantjes.html">see more</a></section>
+          <a href="./projects/marian-bantjes.html"><h3>Marian Bantjes Magazine Spread</h3></a>
+          <a href="./projects/marian-bantjes.html"><img src="./images/Magazine_Mockup_5.png" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
+          <section><a href="./projects/marian-bantjes.html">see more</a></section>
         </div>
         <div class="thumbnail">
-          <a href="/portfolio/layouts/projects/itque-brochure.html"><h3>Itque Brochure</h3></a>
-          <a href="/portfolio/layouts/projects/itque-brochure.html"><img src="/portfolio/layouts/images/itque-brochure-mockup.jpg" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
-          <section><a href="/portfolio/layouts/projects/itque-brochure.html">see more</a></section>
+          <a href="./projects/itque-brochure.html"><h3>Itque Brochure</h3></a>
+          <a href="./projects/itque-brochure.html"><img src="./images/itque-brochure-mockup.jpg" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
+          <section><a href="./projects/itque-brochure.html">see more</a></section>
         </div>
         <div class="thumbnail">
-          <a href="/portfolio/layouts/projects/creators-raffle.html"><h3>Creator's Raffle Movie Poster</h3></a>
-          <a href="/portfolio/layouts/projects/creators-raffle.html"><img src="/portfolio/layouts/images/movieposter-redo-mockup-v4.2.jpg" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
-          <section><a href="/portfolio/layouts/projects/creators-raffle.html">see more</a></section>
+          <a href="./projects/creators-raffle.html"><h3>Creator's Raffle Movie Poster</h3></a>
+          <a href="./projects/creators-raffle.html"><img src="./images/movieposter-redo-mockup-v4.2.jpg" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
+          <section><a href="./projects/creators-raffle.html">see more</a></section>
         </div>
         <div class="thumbnail">
-          <a href="/portfolio/layouts/projects/kamunsil-cd.html"><h3>Kamunsil CD Cover</h3></a>
-          <a href="/portfolio/layouts/projects/kamunsil-cd.html"><img src="/portfolio/layouts/images/Kamunsil-CD-Mockup-v2.jpg" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
-          <section><a href="/portfolio/layouts/projects/kamunsil-cd.html">see more</a></section>
+          <a href="./projects/kamunsil-cd.html"><h3>Kamunsil CD Cover</h3></a>
+          <a href="./projects/kamunsil-cd.html"><img src="./images/Kamunsil-CD-Mockup-v2.jpg" alt="Lily Forman Protrait" width="2000" class="cards" /></a>
+          <section><a href="./projects/kamunsil-cd.html">see more</a></section>
         </div>
       </div>
     </div>
@@ -73,7 +73,7 @@
     </div>
 
     <div style="text-align: center;">
-      <a href="/contact.html">
+      <a href="./../../contact.html">
         <h3>Reach Out</h3>
       </a>
       <ul>
@@ -84,8 +84,8 @@
 
     <div style="align-self:center;">
       <ul class="social-icons">
-        <li><a href="https://www.instagram.com/willows.studi0/"><img src="/images/icon-insta.png"></a></li>
-        <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="/images/icon-in.png"></a></li>
+        <li><a href="https://www.instagram.com/willows.studi0/"><img src="./../../images/icon-insta.png"></a></li>
+        <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="./../../images/icon-in.png"></a></li>
       </ul>
     </div>
   </footer>
