--- a/portfolio/layouts/projects/creators-raffle.html
+++ b/portfolio/layouts/projects/creators-raffle.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lily Design - Creator's Raffle</title>
-    <link href="/css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+    <link href="./../../../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -15,18 +15,18 @@
         <!-- Header -->
         <header>
             <div>
-                <a href="/">
-                    <img src="/images/logo-w-letterhead-outl-bigger-72.png" />
+                <a href="./../../../index.html">
+                    <img src="./../../../images/logo-w-letterhead-outl-bigger-72.png" />
                 </a>
             </div>
-            <nav>
+            <nav style="word-spacing: 40px;">
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about.html">About</a></li>
-                    <li><a href="/portfolio/portfolio.html">Portolio</a></li>
-                    <li><a href="/services.html">Services</a></li>
-                    <li><a href="/shopping/shopping.html">Shopping</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="./../../../index.html">Home</a></li>
+                    <li><a href="./../../../about.html">About</a></li>
+                    <li><a href="./../../../portfolio/portfolio.html">Portfolio</a></li>
+                    <li><a href="./../../../services.html">Services</a></li>
+                    <li><a href="./../../../shopping/shopping.html">Shop</a></li>
+                    <li><a href="./../../../contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -34,11 +34,11 @@
         <div>
             <nav>
                 <ul style="padding-left: 0; padding-top: 30px; padding-bottom: 15px;">
-                    <li style="display: inline;"><a style="color: #066129" href="/portfolio/portfolio.html">Portolio</a>
+                    <li style="display: inline;"><a style="color: #066129" href="./../../../portfolio/portfolio.html">Portfolio</a>
                     </li>
                     <span style="color: #066129;">|</span>
                     <li style="display: inline;"><a style="color: #066129"
-                            href="/portfolio/layouts/layouts.html">Layouts</a>
+                            href="./../layouts.html">Layouts</a>
                     </li> <span style="color: #066129;">|</span>
                     <li style="display: inline;"><a style="color: #066129" href="#top">Creator's Raffle Movie Poster</a>
                     </li>
@@ -53,19 +53,19 @@
         </div>
 
         <!-- Top Section -->
-        <div style="display: flex">
+        <div style="display: flex; padding-top: 20px;">
             <!-- images -->
-            <div style="display: flex; flex-direction: column; margin-right: 15px; width: 49%;">
+            <div style="display: flex; flex-direction: column; margin-right: 15px; width: 49%; padding-top: 25px;">
                 <!-- initial sketches -->
                 <div style="display: flex; flex-direction: row;">
                     <div>
-                        <img style="width:100%; height: 100%" src="/portfolio/layouts/projects/image/movieposter-redo-2.0.jpg">
+                        <img style="width:100%; height: 100%" src="./image/movieposter-redo-2.0.jpg">
                     </div>
                 </div>
             </div>
 
             <!-- overview / objective -->
-            <div style="width: 49%;">
+            <div style="width: 49%; padding-left: 30px;">
                 <p>“Creator’s Raffle” is a made-up movie where a shipyard worker is told he’s won the opportunity to become
                 a “Creator,” in which a random person from an eligible universe gets the chance to create their own
                 universe. This movie would fall into categories that other stories such as “A Wrinkle in Time” and
@@ -151,7 +151,7 @@
         </div>
 
         <div style="text-align: center;">
-            <a href="/contact.html">
+            <a href="./../../../contact.html">
                 <h3>Reach Out</h3>
             </a>
             <ul>
@@ -162,8 +162,8 @@
 
         <div style="align-self:center;">
             <ul class="social-icons">
-                <li><a href="https://www.instagram.com/willows.studi0/"><img src="/images/icon-insta.png"></a></li>
-                <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="/images/icon-in.png"></a></li>
+                <li><a href="https://www.instagram.com/willows.studi0/"><img src="./../../../images/icon-insta.png"></a></li>
+                <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="./../../../images/icon-in.png"></a></li>
             </ul>
         </div>
     </footer>
