--- a/portfolio/layouts/projects/itque-brochure.html
+++ b/portfolio/layouts/projects/itque-brochure.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lily Design - Itque Brochure </title>
-    <link href="/css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+    <link href="./../../../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -15,18 +15,18 @@
         <!-- Header -->
         <header>
             <div>
-                <a href="/">
-                    <img src="/images/logo-w-letterhead-outl-bigger-72.png" />
+                <a href="./../../../index.html">
+                    <img src="./../../../images/logo-w-letterhead-outl-bigger-72.png" />
                 </a>
             </div>
-            <nav>
+            <nav style="word-spacing: 40px;">
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about.html">About</a></li>
-                    <li><a href="/portfolio/portfolio.html">Portolio</a></li>
-                    <li><a href="/services.html">Services</a></li>
-                    <li><a href="/shopping/shopping.html">Shopping</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="./../../../index.html">Home</a></li>
+                    <li><a href="./../../../about.html">About</a></li>
+                    <li><a href="./../../../portfolio/portfolio.html">Portfolio</a></li>
+                    <li><a href="./../../../services.html">Services</a></li>
+                    <li><a href="./../../../shopping/shopping.html">Shop</a></li>
+                    <li><a href="./../../../contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -34,13 +34,14 @@
         <div>
             <nav>
                 <ul style="padding-left: 0; padding-top: 30px; padding-bottom: 15px;">
-                    <li style="display: inline;"><a style="color: #066129" href="/portfolio/portfolio.html">Portolio</a>
+                    <li style="display: inline;"><a style="color: #066129" href="./../../../portfolio/portfolio.html">Portfolio</a>
                     </li>
                     <span style="color: #066129;">|</span>
                     <li style="display: inline;"><a style="color: #066129"
-                            href="/portfolio/layouts/layouts.html">Layouts</a>
+                            href="./../layouts.html">Layouts</a>
                     </li> <span style="color: #066129;">|</span>
-                    <li style="display: inline;"><a style="color: #066129" href="#top">Itque Brochure</a></li>
+                    <li style="display: inline;"><a style="color: #066129" href="#top">Itque Brochure</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -51,46 +52,18 @@
         </div>
 
         <!-- Top Section -->
-        <div style="display: flex">
+        <div style="display: flex;">
             <!-- Images -->
-            <div style="display: flex; flex-direction: column; margin-right: 15px; width: 49%;">
-                <!-- Initial Sketch -->
-                <div style="display: flex; flex-direction: row;">
-                    <div>
-                        <img style="width: 100%; height: 100%;" src="/portfolio/layouts/projects/image/itque-sketch-1.jpeg">
-                    </div>
-                    <div>
-                        <img style="width: 100%; height: 100%;" src="/portfolio/layouts/projects/image/itque-sketch-2.jpeg">
-                    </div>
-                </div>
-
-                <!-- The Rest of the Images -->
-                <div style="display: flex; flex-direction: row; height: auto;">
-                    <!-- logo -->
-                    <div style="flex: 1;">
-                        <img style="width: 100%; height: auto;"
-                            src="/portfolio/layouts/projects/image/itque-logo-only-trans.png">
-                    </div>
-
-                    <div style="flex: 1; display: flex; flex-direction: column;">
-                        <!-- logo title -->
-                        <div style="flex-grow: 1;">
-                            <img style="width: 100%; height: auto;margin-top: 20px;"
-                                src="/portfolio/layouts/projects/image/ITque-title-transparent.png">
-                        </div>
-                        <!-- wire tree -->
-                        <div style="display: flex; flex-direction: row;">
-                            <div style="flex: 1;">
-                                <img style="width: 80%; height: auto;"
-                                    src="/portfolio/layouts/projects/image/wire-tre-new.png">
-                            </div>
-                        </div>
-                    </div>
+            <div
+                style="flex: 1; display: flex; flex-direction: column; padding-right: 70px; padding-top: 50px; width: 49%;">
+                <div>
+                    <img style="width: 100%; height: auto"
+                        src="./image/itque-brochure-mockup.jpg">
                 </div>
             </div>
 
-            <!-- overview / objective -->
-            <div style="width: 49%;">
+            <!-- Overview -->
+            <div style="flex: 1; width: 49%;">
                 <h3 style="color: #DA1E51; font-weight: normal; font-size: 3rem;">Overview</h3>
                 <p>This tri-fold brochure was voluntarily created for ITque, an IT services company, to provide
                     potential clients with a clear, concise overview of their offerings, values, and leadership. The
@@ -109,9 +82,9 @@
         </div>
 
         <!-- Middle Section -->
-        <div style="display: flex;">
+        <div style="display: flex; padding-top: 50px;">
             <!-- Process -->
-            <div style="flex: 1; width: 49%;">
+            <div style="flex: 1; width: 49%; padding-right: 40px;">
                 <h3 style="color: #DA1E51; font-weight: normal; font-size: 3rem;">Process</h3>
                 <p>I structured the brochure with sections for services, leadership, philosophy, and contact details,
                     prioritizing readability and flow. I incorporated gradients, bold icons, and a cool blue color
@@ -127,30 +100,61 @@
             </div>
             <!-- Images -->
             <div
-                style="flex: 1; display: flex; flex-direction: column; padding-left: 20px; padding-top: 60px; width: 49%;">
+                style="flex: 1; display: flex; flex-direction: column; padding-left: 20px; padding-top: 50px; width: 49%;">
                 <div>
                     <img style="width: 100%; height: auto"
-                        src="/portfolio/layouts/projects/image/itque-brochure-FM.jpg">
+                        src="./image/itque-brochure-FM.jpg">
                 </div>
                 <div>
                     <img style="width: 100%; height: auto"
-                        src="/portfolio/layouts/projects/image/itque-brochure-FM2.jpg">
+                        src="./image/itque-brochure-FM2.jpg">
                 </div>
             </div>
         </div>
 
         <!-- Bottom Section -->
-        <div style="display: flex;">
+        <div style="display: flex; padding-top: 50px;">
             <!-- Images -->
-            <div style="flex: 1; display: flex; flex-direction: column; padding-right: 100px; padding-top: 60px; width: 49%;">
-                <div>
-                    <img style="width: 100%; height: auto"
-                        src="/portfolio/layouts/projects/image/itque-brochure-mockup.jpg">
+            <div style="display: flex; flex-direction: column; margin-right: 15px; width: 49%; padding-top: 50px;">
+                <!-- Initial Sketch -->
+                <div style="display: flex; flex-direction: row;">
+                    <div>
+                        <img style="width: 100%; height: 100%;"
+                            src="./image/itque-sketch-1.jpeg">
+                    </div>
+                    <div>
+                        <img style="width: 100%; height: 100%;"
+                            src="./image/itque-sketch-2.jpeg">
+                    </div>
+                </div>
+
+                <!-- The Rest of the Images -->
+                <div style="display: flex; flex-direction: row; height: auto;">
+                    <!-- logo -->
+                    <div style="flex: 1;">
+                        <img style="width: 100%; height: auto;"
+                            src="./image/itque-logo-only-trans.png">
+                    </div>
+
+                    <div style="flex: 1; display: flex; flex-direction: column;">
+                        <!-- logo title -->
+                        <div style="flex-grow: 1;">
+                            <img style="width: 100%; height: auto;margin-top: 20px;"
+                                src="./image/ITque-title-transparent.png">
+                        </div>
+                        <!-- wire tree -->
+                        <div style="display: flex; flex-direction: row;">
+                            <div style="flex: 1;">
+                                <img style="width: 80%; height: auto;"
+                                    src="./image/wire-tre-new.png">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <!-- Outcome -->
-            <div style="flex: 1; width: 49%;">
+            <!-- outcome -->
+            <div style="width: 49%; padding-left: 40px;">
                 <h3 style="color: #DA1E51; font-weight: normal; font-size: 3rem;">Outcome</h3>
                 <p>The final brochure is visually engaging and well-organized, effectively highlighting ITque’s
                     strengths and services. ITque has expressed further interest in the design and wishes to expand the
@@ -162,10 +166,9 @@
                     appealing and easy to digest. The opportunity to design within a more professional context was
                     invaluable.
                 </p>
+
             </div>
         </div>
-
-
         <!-- Main container ends -->
     </div>
 
@@ -176,7 +179,7 @@
         </div>
 
         <div style="text-align: center;">
-            <a href="/contact.html">
+            <a href="./../../../contact.html">
                 <h3>Reach Out</h3>
             </a>
             <ul>
@@ -187,8 +190,8 @@
 
         <div style="align-self:center;">
             <ul class="social-icons">
-                <li><a href="https://www.instagram.com/willows.studi0/"><img src="/images/icon-insta.png"></a></li>
-                <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="/images/icon-in.png"></a></li>
+                <li><a href="https://www.instagram.com/willows.studi0/"><img src="./../../../images/icon-insta.png"></a></li>
+                <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="./../../../images/icon-in.png"></a></li>
             </ul>
         </div>
     </footer>
