--- a/portfolio/layouts/projects/kamunsil-cd.html
+++ b/portfolio/layouts/projects/kamunsil-cd.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lily Design - Kamunsil CD Cover</title>
-    <link href="/css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+    <link href="./../../../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -15,18 +15,18 @@
         <!-- Header -->
         <header>
             <div>
-                <a href="/">
-                    <img src="/images/logo-w-letterhead-outl-bigger-72.png" />
+                <a href="./../../../index.html">
+                    <img src="./../../../images/logo-w-letterhead-outl-bigger-72.png" />
                 </a>
             </div>
-            <nav>
+            <nav style="word-spacing: 40px;">
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about.html">About</a></li>
-                    <li><a href="/portfolio/portfolio.html">Portolio</a></li>
-                    <li><a href="/services.html">Services</a></li>
-                    <li><a href="/shopping/shopping.html">Shopping</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="./../../../index.html">Home</a></li>
+                    <li><a href="./../../../about.html">About</a></li>
+                    <li><a href="./../../../portfolio/portfolio.html">Portfolio</a></li>
+                    <li><a href="./../../../services.html">Services</a></li>
+                    <li><a href="./../../../shopping/shopping.html">Shop</a></li>
+                    <li><a href="./../../../contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -34,11 +34,11 @@
         <div>
             <nav>
                 <ul style="padding-left: 0; padding-top: 30px; padding-bottom: 15px;">
-                    <li style="display: inline;"><a style="color: #066129" href="/portfolio/portfolio.html">Portolio</a>
+                    <li style="display: inline;"><a style="color: #066129" href="./../../../portfolio/portfolio.html">Portfolio</a>
                     </li>
                     <span style="color: #066129;">|</span>
                     <li style="display: inline;"><a style="color: #066129"
-                            href="/portfolio/layouts/layouts.html">Layouts</a>
+                            href="./../layouts.html">Layouts</a>
                     </li> <span style="color: #066129;">|</span>
                     <li style="display: inline;"><a style="color: #066129" href="#top">Kamunsil CD Cover</a>
                     </li>
@@ -53,20 +53,20 @@
         </div>
 
         <!-- Top Section -->
-        <div style="display: flex">
+        <div style="display: flex; padding-top: 20px;">
             <!-- images -->
-            <div style="display: flex; flex-direction: column; margin-right: 15px; width: 49%;">
+            <div style="display: flex; flex-direction: column; margin-right: 15px; width: 49%; padding-top: 25px;">
                 <!-- initial sketches -->
                 <div style="display: flex; flex-direction: row;">
                     <div>
                         <img style="width:100%; height: 100%"
-                            src="/portfolio/layouts/projects/image/Kamunsil-CD-Mockup-v2.jpg">
+                            src="./image/Kamunsil-CD-Mockup-v2.jpg">
                     </div>
                 </div>
             </div>
 
             <!-- overview / objective -->
-            <div style="width: 49%;">
+            <div style="width: 49%; padding-left: 30px;">
                 <p>Kamunsil’s music genre is 80’s and 90’s Filipino rock. To stay within the genre while maintaining
                     uniqueness, I paired a typical color palette, dark grays, and gold, with more contemporary imagery
                     such as the oni mask (traditional Japanese demon mask) and the pattern of a Damascus steel knife.
@@ -114,7 +114,7 @@
                 style="flex: 1; display: flex; flex-direction: column; padding-left: 200px; padding-top: 60px; width: 49%;">
                 <div>
                     <img style="width: auto; height: 80%"
-                        src="/portfolio/layouts/projects/image/seeding-the-city-poster_fin-mech.jpg">
+                        src="./image/seeding-the-city-poster_fin-mech.jpg">
                 </div>
             </div>
         </div> -->
@@ -153,7 +153,7 @@
         </div>
 
         <div style="text-align: center;">
-            <a href="/contact.html">
+            <a href="./../../../contact.html">
                 <h3>Reach Out</h3>
             </a>
             <ul>
@@ -164,8 +164,8 @@
 
         <div style="align-self:center;">
             <ul class="social-icons">
-                <li><a href="https://www.instagram.com/willows.studi0/"><img src="/images/icon-insta.png"></a></li>
-                <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="/images/icon-in.png"></a></li>
+                <li><a href="https://www.instagram.com/willows.studi0/"><img src="./../../../images/icon-insta.png"></a></li>
+                <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="./../../../images/icon-in.png"></a></li>
             </ul>
         </div>
     </footer>
