--- a/portfolio/layouts/projects/seeding-city.html
+++ b/portfolio/layouts/projects/seeding-city.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lily Design - Seeding the City</title>
-    <link href="/css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+    <link href="./../../../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -15,18 +15,18 @@
         <!-- Header -->
         <header>
             <div>
-                <a href="/">
-                    <img src="/images/logo-w-letterhead-outl-bigger-72.png" />
+                <a href="./../../../index.html">
+                    <img src="./../../../images/logo-w-letterhead-outl-bigger-72.png" />
                 </a>
             </div>
-            <nav>
+            <nav style="word-spacing: 40px;">
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about.html">About</a></li>
-                    <li><a href="/portfolio/portfolio.html">Portolio</a></li>
-                    <li><a href="/services.html">Services</a></li>
-                    <li><a href="/shopping/shopping.html">Shopping</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="./../../../index.html">Home</a></li>
+                    <li><a href="./../../../about.html">About</a></li>
+                    <li><a href="./../../../portfolio/portfolio.html">Portfolio</a></li>
+                    <li><a href="./../../../services.html">Services</a></li>
+                    <li><a href="./../../../shopping/shopping.html">Shop</a></li>
+                    <li><a href="./../../../contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -34,13 +34,14 @@
         <div>
             <nav>
                 <ul style="padding-left: 0; padding-top: 30px; padding-bottom: 15px;">
-                    <li style="display: inline;"><a style="color: #066129" href="/portfolio/portfolio.html">Portolio</a>
+                    <li style="display: inline;"><a style="color: #066129" href="./../../../portfolio/portfolio.html">Portfolio</a>
                     </li>
                     <span style="color: #066129;">|</span>
                     <li style="display: inline;"><a style="color: #066129"
-                            href="/portfolio/layouts/layouts.html">Layouts</a>
+                            href="./../layouts.html">Layouts</a>
                     </li> <span style="color: #066129;">|</span>
-                    <li style="display: inline;"><a style="color: #066129" href="#top">Seeding the City</a></li>
+                    <li style="display: inline;"><a style="color: #066129" href="#top">Seeding the City</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -51,26 +52,15 @@
         </div>
 
         <!-- Top Section -->
-        <div style="display: flex">
-            <!-- images -->
-            <div style="display: flex; flex-direction: column; margin-right: 15px; width: 49%;">
-                <!-- initial sketches -->
-                <div style="display: flex; flex-direction: row;">
-                    <div>
-                        <img style="width:100%; height: 100%" src="/portfolio/layouts/projects/image/IMG_1066.jpeg">
-                    </div>
-                    <div>
-                        <img style="width:100%; height: 100%" src="/portfolio/layouts/projects/image/Scan 4.png">
-                    </div>
-                </div>
-                <!-- intermediate logo -->
-                <div style="width: 100%;">
-                    <img style="width:100%; height: 100%"
-                        src="/portfolio/layouts/projects/image/view-new-york-city-manhattan-midtown-dusk-with-skyscrapers-illuminated-east-river.jpg">
+        <div style="display: flex;">
+            <!-- Images -->
+            <div style="flex: 1; display: flex; flex-direction: column; padding-top: 50px; width: 49%;">
+                <div>
+                    <img style="width: auto; height: 90%"
+                        src="./image/seeding-the-city-poster_fin-mech.jpg">
                 </div>
             </div>
-
-            <!-- overview / objective -->
+            <!-- Overview -->
             <div style="width: 49%;">
                 <h3 style="color: #DA1E51; font-weight: normal; font-size: 3rem;">Overview</h3>
                 <p>This poster design was created as part of a conceptual project focused on urban greening, aiming to
@@ -87,13 +77,14 @@
                     life fully ingrained into our urban landscape.
                 </p>
             </div>
+
         </div>
 
         <!-- Middle Section -->
-        <div style="display: flex;">
-            <!-- Process -->
+        <div style="display: flex">
+            <!-- process -->
             <div style="flex: 1; width: 49%;">
-                <h3 style="color: #DA1E51; font-weight: normal; font-size: 3rem;">Process</h3>
+                <h3 style="color: #DA1E51; font-weight: normal; font-size:3rem;">Process</h3>
                 <p>This piece was made using a picture I took of a vase with flowers in it. The vase was actually a
                     repurposed daiquiri cup and the flowers are white and red carnations. Symbolically, red carnations
                     represent love, and white carnations are good luck. The combination of the two helps to add depth to
@@ -119,14 +110,28 @@
                     having hope for the future of the environment and ourselves.
                 </p>
             </div>
-            <!-- Images -->
-            <div style="flex: 1; display: flex; flex-direction: column; padding-left: 200px; padding-top: 60px; width: 49%;">
-                <div>
-                    <img style="width: auto; height: 80%"
-                        src="/portfolio/layouts/projects/image/seeding-the-city-poster_fin-mech.jpg">
+            <!-- images -->
+            <div style="display: flex; flex-direction: column; margin-right: 15px; width: 49%; padding-left: 150px; padding-top: 50px;">
+                <!-- initial sketches -->
+                <div style="display: flex; flex-direction: row;">
+                    <div>
+                        <img style="width:100%; height: 100%" src="./image/IMG_1066.jpeg">
+                    </div>
+                    <div>
+                        <img style="width:100%; height: 100%" src="./image/Scan 4.png">
+                    </div>
+                </div>
+                <!-- intermediate logo -->
+                <div style="width: 100%;">
+                    <img style="width:100%; height: 100%"
+                        src="./image/view-new-york-city-manhattan-midtown-dusk-with-skyscrapers-illuminated-east-river.jpg">
                 </div>
             </div>
+
+
         </div>
+
+
 
         <!-- Bottom Section -->
         <!-- <div style="display: flex;"> -->
@@ -162,7 +167,7 @@
         </div>
 
         <div style="text-align: center;">
-            <a href="/contact.html">
+            <a href="./../../../contact.html">
                 <h3>Reach Out</h3>
             </a>
             <ul>
@@ -173,8 +178,8 @@
 
         <div style="align-self:center;">
             <ul class="social-icons">
-                <li><a href="https://www.instagram.com/willows.studi0/"><img src="/images/icon-insta.png"></a></li>
-                <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="/images/icon-in.png"></a></li>
+                <li><a href="https://www.instagram.com/willows.studi0/"><img src="./../../../images/icon-insta.png"></a></li>
+                <li><a href="https://www.linkedin.com/in/lily-forman-design/"><img src="./../../../images/icon-in.png"></a></li>
             </ul>
         </div>
     </footer>
